--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 ---
 layout: default
 ---
+
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@500&display=swap');
+</style>
+
 <div class="search-container">
   <input type="text" id="search-input" placeholder="search blog posts..." style="width: 90%;
     height: 35px;
