--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: default
   <input type="text" id="search-input" placeholder="search blog posts..." style="width: 90%;
     height: 35px;
     color: #333;
-    background-color: rgba(245,212,237,.2);
+    background-color: rgba(245,212,237,2);
     line-height: 35px;
     padding:0px 16px;
     border: 1px solid #c0c0c0;
